[gd_scene load_steps=2 format=3 uid="uid://djx0085ahwi5k"]

[ext_resource type="Script" path="res://_debug/UI.gd" id="1_u4bvb"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_u4bvb")

[node name="debug_stats" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="debug_stats2" type="Label" parent="."]
offset_left = 1.0
offset_top = 29.0
offset_right = 41.0
offset_bottom = 52.0

[node name="debug_level_btn1" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -72.0
offset_right = -107.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="debug_level_btn1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 1, 0.27451, 0.733333)

[node name="Label" type="Label" parent="debug_level_btn1/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "level 1"

[node name="Button_level1" type="Button" parent="debug_level_btn1/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="debug_level_btn2" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -72.0
offset_right = 5.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="debug_level_btn2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.706349, 0.70676, 1)

[node name="Label" type="Label" parent="debug_level_btn2/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "level 2"

[node name="Button_level2" type="Button" parent="debug_level_btn2/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="debug_level_btn3" type="TextureRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -72.0
offset_right = 117.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="debug_level_btn3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.831373, 0.0980392, 0.141176, 1)

[node name="Label" type="Label" parent="debug_level_btn3/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.5
offset_right = 25.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "level 3"

[node name="Button_level3" type="Button" parent="debug_level_btn3/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="debug_level_btn1/ColorRect/Button_level1" to="." method="_on_button_level_1_pressed"]
[connection signal="pressed" from="debug_level_btn2/ColorRect/Button_level2" to="." method="_on_button_level_2_pressed"]
[connection signal="pressed" from="debug_level_btn3/ColorRect/Button_level3" to="." method="_on_button_level_3_pressed"]
